syntax = "proto3";

package test.integration.clusters;

message CustomStaticConfig1 {
  uint32 priority = 1;
  string address = 2;
  uint32 port_value = 3;
}

message CustomStaticConfig2 {
  uint32 priority = 1;
  string address = 2;
  uint32 port_value = 3;
}
